2006-03-08  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (statvfs): Simplify path name expression.

2006-03-08  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc: Include winioctl.h.
	(statvfs): Request correct volume size using DeviceIoControl if
	quotas are enforced on the file system.

2006-03-06  Corinna Vinschen  <corinna@vinschen.de>

	* dcrt0.cc (_dll_crt0): Revert to initialize *main_environ to NULL for
	non-forked processes to circumvent problems with applications which
	are messing around with the global variable "environ" in some
	arbitrary way.

2006-03-03  Corinna Vinschen  <corinna@vinschen.de>

	* dir.cc (opendir): Fix indentation.
	* fhandler_disk_file.cc (fhandler_disk_file::opendir): Move storing
	fhandler in file descriptor table to some point very late in function
	to avoid double free'ing.  Add comment to explain what happens.
	Add label free_mounts and don't forget to delete __DIR_mounts structure
	if NtOpenFile fails.

2006-03-02  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (chroot): Disallow chroot into special directories.
	Return EPERM instead.

2006-03-02  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (__DIR_mounts::check_missing_mount): Check
	cygdrive string length for those who have cygdrive mapped to "/".

2006-03-01  Corinna Vinschen  <corinna@vinschen.de>

	* sec_helper.cc (set_cygwin_privileges): Request SE_BACKUP_NAME
	privileges.

2006-03-01  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_proc.cc (fhandler_proc::fstat): Always return fixed link
	count of 1 for /proc directory instead of incorrect PROC_LINK_COUNT.

2006-03-01  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (enum dirent_states): Remove dirent_saw_cygdrive,
	dirent_saw_dev and dirent_saw_proc.
	(fhandler_cygdrive::open): Declare.
	(fhandler_cygdrive::close): Declare.
	* fhandler_disk_file.cc (class __DIR_mounts): Move to beginning of file.